--- a/sample_config.env
+++ b/sample_config.env
@@ -1,11 +1,11 @@
 # REQUIRED CONFIG
-API_HASH = ''
-API_ID = 0
-BOT_TOKEN = ''
-OWNER_ID = 0
+API_HASH = '@See_u_u_bot'
+API_ID = 5364331806
+BOT_TOKEN = '5364331806:AAH5TV4heHOuss3BVTP5qzlWrsO0YOoI20g'
+OWNER_ID = 1995926970
 RCLONE_CONFIG = ''
-ALLOWED_USERS= ''
-ALLOWED_CHATS= ''
+ALLOWED_USERS= '1995926970'
+ALLOWED_CHATS= '1995926970'
 # OPTIONAL CONFIG
 EDIT_SLEEP_SECS= 10
 TG_SPLIT_SIZE= 2097151000
