--- a/sample_config.env
+++ b/sample_config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
-API_HASH = '@See_u_u_bot'
-API_ID = 5364331806
+API_HASH = 'cfe6f28ad5af06af72fc19cb7aab1fc3'
+API_ID = 16483592
 BOT_TOKEN = '5364331806:AAH5TV4heHOuss3BVTP5qzlWrsO0YOoI20g'
 OWNER_ID = 1995926970
 RCLONE_CONFIG = ''
